Set pointer-events to none on action bar for now to temporarily fix overlap with right menu button

--- a/src/plugins/mobile-ui/public/css/style.css
+++ b/src/plugins/mobile-ui/public/css/style.css
@@ -95,6 +95,7 @@ html, body
 	float: left;
 	position: relative;
 	left: 50%;
+	pointer-events: none;
 }
 
 .action-bar-container
@@ -103,6 +104,7 @@ html, body
 	position: relative;
 	left: -50%;
 	vertical-align: top;
+	
 }
 
 .action-bar-container div
